--- a/railway.toml
+++ b/railway.toml
@@ -2,18 +2,15 @@
 builder = "NIXPACKS"
 
 [variables]
-# Esto soluciona el problema de la carpeta /public
+# Indicamos a Nixpacks dónde está el index.php
 DOCUMENT_ROOT = "/public"
-# Forzamos a que PHP reconozca el puerto de Railway
-PORT = "8080"
 
 [deploy]
-# Comando para el servidor web principal
-# Incluye migraciones, optimización y el inicio del servidor
-startCommand = "php artisan migrate --force && php artisan optimize && php artisan serve --host=0.0.0.0 --port=$PORT"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
+# Usamos el comando nativo de Nixpacks para PHP que es más confiable que 'serve'
+startCommand = "php artisan migrate --force && php artisan optimize && heroku-php-apache2 public/"
+healthCheckPath = "/"
+healthCheckTimeout = 100
 
 [deploy.workers]
-# Proceso independiente para Laravel Reverb
-reverb = "php artisan reverb:start --host=0.0.0.0 --port=8081"
+# Proceso para Reverb
+reverb = "php artisan reverb:start --host=0.0.0.0 --port=8080"
