--- a/railway.toml
+++ b/railway.toml
@@ -2,14 +2,14 @@
 builder = "NIXPACKS"
 
 [variables]
-# Indicamos a Nixpacks dónde está el index.php
+# Forzamos la carpeta pública para el servidor interno de PHP
 DOCUMENT_ROOT = "/public"
 
 [deploy]
-# Usamos el comando nativo de Nixpacks para PHP que es más confiable que 'serve'
-startCommand = "php artisan migrate --force && php artisan optimize && heroku-php-apache2 public/"
-healthCheckPath = "/"
-healthCheckTimeout = 100
+# Usamos php artisan serve pero asegurándonos de que use el puerto que Railway le asigna
+startCommand = "php artisan migrate --force && php artisan optimize && php artisan serve --host=0.0.0.0 --port=$PORT"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 5
 
 [deploy.workers]
 # Proceso para Reverb
