--- a/railway.toml
+++ b/railway.toml
@@ -2,15 +2,14 @@
 builder = "NIXPACKS"
 
 [variables]
-# Forzamos la carpeta pública para el servidor interno de PHP
 DOCUMENT_ROOT = "/public"
 
 [deploy]
-# Usamos php artisan serve pero asegurándonos de que use el puerto que Railway le asigna
+# Usamos php artisan serve. Es vital que el host sea 0.0.0.0
 startCommand = "php artisan migrate --force && php artisan optimize && php artisan serve --host=0.0.0.0 --port=$PORT"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 5
+healthCheckPath = "/"
+healthCheckTimeout = 120
 
 [deploy.workers]
-# Proceso para Reverb
+# El servidor Reverb escucha internamente en el 8080
 reverb = "php artisan reverb:start --host=0.0.0.0 --port=8080"
