--- a/railway.toml
+++ b/railway.toml
@@ -1,14 +1,11 @@
 [build]
 builder = "NIXPACKS"
 
-[variables]
-# Indispensable para que el servidor web sepa dónde entrar
-DOCUMENT_ROOT = "/public"
-
 [deploy]
-# Solo comandos de preparación. Nixpacks iniciará el servidor web automáticamente.
-startCommand = "php artisan migrate --force && php artisan optimize"
+# El comando de inicio debe ser EXACTAMENTE este para que Nixpacks 
+# levante el servidor web de producción (Apache/Nginx) correctamente.
+startCommand = "php artisan migrate --force && php artisan optimize && start-container"
 
 [deploy.workers]
-# Proceso independiente para Reverb
+# Proceso separado para Reverb
 reverb = "php artisan reverb:start --host=0.0.0.0 --port=8080"
